--- a/Views/Auth/Login.cshtml
+++ b/Views/Auth/Login.cshtml
@@ -36,7 +36,7 @@
             $('#bt_ok_modal_tb').text('Đóng');
             $('#span_noidung_thongbao').text('Đã hết thời gian, hệ thống tạm dừng đăng ký dự tuyển đại học');
             $('#modal_tb').modal('show');
-            /*window.location.href = '/Auth/RegisterColleger/';  */
+            window.location.href = '/Auth/RegisterColleger/';  
         })
 
         $('#showSignupMaster').click(function () {
@@ -54,7 +54,7 @@
             $('#bt_ok_modal_tb').text('Đóng');
             $('#span_noidung_thongbao').text('Đã hết thời gian, trường liên cấp tạm dừng đăng ký dự tuyển');
             $('#modal_tb').modal('show');
-            /* window.location.href = '/LienCapTHCS/index/';*/
+             window.location.href = '/LienCapTHCS/index/';
         })
     })
 
