--- a/Areas/Admin/Views/TruongLienCaps/EditThcs.cshtml
+++ b/Areas/Admin/Views/TruongLienCaps/EditThcs.cshtml
@@ -2,13 +2,14 @@
 
 @{
     ViewBag.Title = "Edit";
-    Layout = "~/Areas/Admin/Views/Shared/_Layout_Admin.cshtml";
+    Layout = "~/Areas/Admin/Views/Shared/_Layout_AdminLienCap.cshtml";
 }
 
 <header class="page-header page-header-compact page-header-light border-bottom bg-white mb-2">
     <div class="container-fluid px-4">
         <div class="page-header-content">
-            <div class="row align-items-center justify-content-between pt-3">
+            <div class="row align-items-center justify-content-between"
+<a href="~/Areas/Admin/Views/TruongLienCaps/DetailsThcs.cshtml">~/Areas/Admin/Views/TruongLienCaps/DetailsThcs.cshtml</a>een pt-3">
                 <div class="col-auto mb-1">
                     <div class="page-header-title  mb-2">
                         <div class="page-header-icon"><i data-feather="list"></i></div>
