--- a/Areas/Admin/Views/DangKyXetTuyens/DkxtHocBa.cshtml
+++ b/Areas/Admin/Views/DangKyXetTuyens/DkxtHocBa.cshtml
@@ -114,7 +114,7 @@
                                     <th>Tổng điểm</th>
                                     <th>Lệ phí</th>
                                     <th>Hồ sơ</th>
-                                    <th>Kiểm tra</th>
+                                    <th style="width:100px">Kiểm tra</th>
                                 </tr>
                             </thead>
                             <tbody>
