--- a/Views/DangKyXetTuyens/dkdtnk.cshtml
+++ b/Views/DangKyXetTuyens/dkdtnk.cshtml
@@ -36,9 +36,6 @@
 </header>
 
 <input type="hidden" style="display:none" id="hidden_Dkdt_NK_ID" />
-<input type="hidden" style="display:none" id="hidden_Dkdt_NK_MonThi" />
-<input type="hidden" style="display:none" id="hidden_Thm_ID" />
-<input type="hidden" style="display:none" id="hidden_Nganh_ID" class="" />
 
 <script>
     //Phần hiển thị dữ liệu ban đầu
@@ -587,7 +584,7 @@
                                                     </div>
                                                     <div class="col-8">
                                                         <input class="form-control" id="Dxt_Ten" disabled />
-                                                        <span id="NamTotNghiep_Error" class="small mb-1 text-danger"></span>
+                                                        <span id="DotThi_Error" class="small mb-1 text-danger"></span>
                                                     </div>
                                                 </div>
                                             </td>
@@ -600,7 +597,7 @@
                                                     </div>
                                                     <div class="col-8">
                                                         <input class="form-control" id="Dxt_ThoiGian_BatDau" disabled />
-                                                        <span id="NamTotNghiep_Error" class="small mb-1 text-danger"></span>
+                                                        <span id="ThoiGianBatDau_Error" class="small mb-1 text-danger"></span>
                                                     </div>
                                                 </div>
                                             </td>
@@ -614,7 +611,7 @@
                                                     </div>
                                                     <div class="col-8">
                                                         <input class="form-control" id="Dxt_ThoiGian_KetThuc" disabled />
-                                                        <span id="NamTotNghiep_Error" class="small mb-1 text-danger"></span>
+                                                        <span id="ThoiGianKetThuc_Error" class="small mb-1 text-danger"></span>
                                                     </div>
                                                 </div>
                                             </td>
