--- a/Areas/Admin/Views/DangKyXetTuyens/DkxtKQTthpt.cshtml
+++ b/Areas/Admin/Views/DangKyXetTuyens/DkxtKQTthpt.cshtml
@@ -67,8 +67,8 @@
 
 
                             @*<button class="btn btn-outline-primary " id="bt_search" style="margin-right:4px">Lọc</button>
-                <a class="btn btn-outline-secondary" id="bt_reset" href="@Url.Action("DkxtKQTthpt", "DangKyXetTuyens")" style="padding-right: 6px; padding-left: 6px; margin-right:4px">Tải lại</a>
-                <a class="btn btn-outline-primary" id="bt_export_excel" href="@Url.Action("ExportTsDkxtKQTthpt", "ExportDatas")" style="padding-right:6px; padding-left:6px">Xuất excel</a>*@
+                                <a class="btn btn-outline-secondary" id="bt_reset" href="@Url.Action("DkxtKQTthpt", "DangKyXetTuyens")" style="padding-right: 6px; padding-left: 6px; margin-right:4px">Tải lại</a>
+                                <a class="btn btn-outline-primary" id="bt_export_excel" href="@Url.Action("ExportTsDkxtKQTthpt", "ExportDatas")" style="padding-right:6px; padding-left:6px">Xuất excel</a>*@
                         </div>
                     </div>
                     <hr class="mt-3 mb-2" />
@@ -110,8 +110,7 @@
                                     <th>Năm TN</th>
                                     <th>Lệ phí</th>
                                     <th>Hồ sơ</th>
-
-                                    <th style="width:100px">Cập nhật</th>
+                                    <th style="width:100px">Kiểm tra</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -126,6 +125,7 @@
                                     {
                                         foreach (var item in Model)
                                         {
+                                           
                                             <tr>
                                                 <td>
                                                     @Html.DisplayFor(modelItem => item.ThiSinhDangKy.ThiSinh_HoLot) @Html.DisplayFor(modelItem => item.ThiSinhDangKy.ThiSinh_Ten)
@@ -153,23 +153,23 @@
                                                     @{
                                                         if (item.Dkxt_KQTQG_TrangThai_KinhPhi == 0)
                                                         {
-                                                            <span style="color: red">Chưa nộp LP</span>
+                                                            <span style="color: red">Chưa nộp minh chứng lệ phí</span>
                                                         }
                                                         if (item.Dkxt_KQTQG_TrangThai_KinhPhi == 1)
                                                         {
-                                                            <span style="color: red">Đã nộp, chưa KT</span>
+                                                            <span style="color: red">Đã nộp, chưa kiểm tra</span>
                                                         }
                                                         if (item.Dkxt_KQTQG_TrangThai_KinhPhi == 2)
                                                         {
-                                                            <span style="color:blue">Đã KT, Có sai sót</span>
+                                                            <span style="color:blue">Đã kiểm tra, Có sai sót</span>
                                                         }
                                                         if (item.Dkxt_KQTQG_TrangThai_KinhPhi == 3)
                                                         {
-                                                            <span style="color:red">Đã sửa, chưa KT</span>
+                                                            <span style="color:red">Đã sửa, chưa kiểm tra</span>
                                                         }
                                                         if (item.Dkxt_KQTQG_TrangThai_KinhPhi == 9)
                                                         {
-                                                            <span>Đã KT, Đúng</span>
+                                                            <span>Đã kiểm tra, Đúng</span>
                                                         }
                                                     }
                                                 </td>
@@ -177,26 +177,25 @@
                                                     @{
                                                         if (item.Dkxt_KQTQG_TrangThai_HoSo == 0)
                                                         {
-                                                            <span style="color: red">Đã nộp, chưa KT</span>
+                                                            <span style="color: red">Chưa kiểm tra</span>
                                                         }
                                                         if (item.Dkxt_KQTQG_TrangThai_HoSo == 1)
                                                         {
-                                                            <span style="color: blue">Đã KT, Có sai sót</span>
+                                                            <span style="color: blue">Đã kiểm tra, Có sai sót</span>
                                                         }
                                                         if (item.Dkxt_KQTQG_TrangThai_HoSo == 2)
                                                         {
-                                                            <span style="color: red">Đã sửa, chưa KT</span>
+                                                            <span style="color: red">Đã sửa, chưa kiểm tra</span>
                                                         }
                                                         if (item.Dkxt_KQTQG_TrangThai_HoSo == 9)
                                                         {
-                                                            <span>Đã KT, HS đúng, đủ</span>
+                                                            <span>Đã kiểm tra, hồ sơ đúng, đủ</span>
                                                         }
                                                     }
-                                                </td>                                              
+                                                </td>
                                                 <td>
                                                     <a class="btn btn-light btn-sm" onclick="KiemtraThongTinDangky(@item.Dkxt_KQTQG_ID)">Kiểm tra</a>
                                                 </td>
-                                             
                                             </tr>
                                         }
                                     }
@@ -208,7 +207,7 @@
                         <!-- Thêm mã phân trang -->
                         Trang @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) / Tổng @Model.PageCount trang/ (Tổng @ViewBag.totalRecod bản ghi)
                         @Html.PagedListPager(Model, page => Url.Action("DkxtKQTthpt", new
-                        {                          
+                        {
                             filteriNvong = ViewBag.NvongFilteri,
                             filteriNganh = ViewBag.NganhFilteri,
                             filteriLePhi = ViewBag.LePhiFilteri,
