#Update site user

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -97,7 +97,7 @@
                                 <a class="nav-link d-flex  justify-content-center" href="@Url.Action("Index", "DangKyXetTuyenThang")">
                                     Tuyển thẳng theo quy   định của trường 
                                 </a>
-                                <a class="nav-link d-flex justify-content-center" href="@Url.Action("DanhGia", "DangKyXetTuyenKhac")">
+                                <a class="nav-link d-flex justify-content-center" href="@Url.Action("Ielts", "DangKyXetTuyenKhac")">
                                     Sử dụng chứng chỉ ngoại ngữ
                                 </a>
                                 <a class="nav-link d-flex justify-content-center" href="@Url.Action("DanhGia", "DangKyXetTuyenKhac")">
