--- a/Areas/Admin/Views/Shared/_Layout_AdminLienCap.cshtml
+++ b/Areas/Admin/Views/Shared/_Layout_AdminLienCap.cshtml
@@ -92,16 +92,16 @@
 
                         <!-- Sidenav Accordion (Dashboard)-->
                         @*<a class="nav-link" href="@Url.Action("TheoDoiNopLePhi", "TongHopSoLieuDKXTs")">
-            <div class="nav-link-icon"><i data-feather="slack"></i></div>
-            Theo dõi nộp kinh phí
-        </a>*@
+                            <div class="nav-link-icon"><i data-feather="slack"></i></div>
+                            Theo dõi nộp kinh phí
+                        </a>*@
 
                         <a class="nav-link" href="javascript:void(0);" data-bs-toggle="collapse" data-bs-target="#collapseLienCap" aria-expanded="false" aria-controls="collapseDashboards">
                             <div class="nav-link-icon"><i data-feather="grid"></i></div>
                             QL Trường Liên cấp
                             <div class="sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                         </a>
-                        <div class="collapse" id="collapseLienCap" data-bs-parent="#accordionSidenav">
+                        <div class="collapse show" id="collapseLienCap" data-bs-parent="#accordionSidenav">
                             <nav class="sidenav-menu-nested nav accordion" id="accordionSidenavPages">
                                 <a class="nav-link" href="@Url.Action("LcTieuhoc", "TruongLienCaps")">Dự tuyển Tiểu học</a>
                                 <a class="nav-link" href="@Url.Action("LcTrunghocCs", "TruongLienCaps")">Dự tuyển THCS</a>
